cr comments